Defined Content Structure

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
-    
+
 </head>
 <body>
+
+    <!-- Top Header Section -->
+    <header>
+
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+
+    </main>
     
 </body>
 </html>
