Added content to the header section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
     <!-- Top Header Section -->
-    <header>
-
+    <header class="header-top">
+        <img src="assets/img/Logo.png" alt="Boolean Main Logo" id="main-logo">
+        <h1 class="main-page-title">Toboolist</h1>
     </header>
 
     <!-- Main Content Section -->
