Added nav buttons section and defined list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,56 @@
 
     <!-- Main Content Section -->
     <main>
+        <!-- Functional Bar Section -->
+        <nav>
+            <button>Add Task</button>
+            <button>Add Section</button>
+        </nav>
 
+        <!-- Begin List -->
+        <section>
+            <h3>New Task</h3>
+            <ul>
+                <li>
+                    <span class="check-visual">&check;</span>Quarterly Newsletter
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Today</h3>
+            <ul>
+                <li>
+                    <span class="check-visual">&check;</span>Recruiting blog post
+                </li>
+                <li>
+                    <span class="check-visual">&check;</span>Mobile app launch
+                </li>
+                <li>
+                    <span class="check-visual">&cross;</span>Interview John H.
+                </li>
+                <li>
+                    <span class="check-visual">&check;</span>Summit update to mobile storefronts
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>Today</h3>
+            <ul>
+                <li>
+                    <span class="check-visual">&cross;</span>Scedule meeting with Alex
+                </li>
+                <li>
+                    <span class="check-visual">&check;</span>Homepage refresh
+                </li>
+                <li>
+                    <span class="check-visual">&check;</span>Onboard new Sales team members
+                </li>
+                <li>
+                    <span class="check-visual">&check;</span>Review editorial calendar
+                </li>
+            </ul>
+        </section>
     </main>
     
 </body>
