Added span for defining check visual list

--- a/index.html
+++ b/index.html
@@ -26,52 +26,52 @@
     <!-- Main Content Section -->
     <main>
         <!-- Functional Bar Section -->
-        <nav>
+        <nav class="functional-buttons">
             <button>Add Task</button>
             <button>Add Section</button>
         </nav>
 
         <!-- Begin List -->
-        <section>
+        <section class="list-row">
             <h3>New Task</h3>
             <ul>
                 <li>
-                    <span class="check-visual">&check;</span>Quarterly Newsletter
+                    <span class="check-visual check">&check;</span>Quarterly Newsletter
                 </li>
             </ul>
         </section>
 
-        <section>
+        <section class="list-row">
             <h3>Today</h3>
             <ul>
                 <li>
-                    <span class="check-visual">&check;</span>Recruiting blog post
+                    <span class="check-visual check">&check;</span>Recruiting blog post
                 </li>
                 <li>
-                    <span class="check-visual">&check;</span>Mobile app launch
+                    <span class="check-visual check">&check;</span>Mobile app launch
                 </li>
                 <li>
-                    <span class="check-visual">&cross;</span>Interview John H.
+                    <span class="check-visual cross">&cross;</span>Interview John H.
                 </li>
                 <li>
-                    <span class="check-visual">&check;</span>Summit update to mobile storefronts
+                    <span class="check-visual check">&check;</span>Summit update to mobile storefronts
                 </li>
             </ul>
-        </section>
+        </section class="list-row">
         <section>
             <h3>Today</h3>
             <ul>
                 <li>
-                    <span class="check-visual">&cross;</span>Scedule meeting with Alex
+                    <span class="check-visual cross">&cross;</span>Scedule meeting with Alex
                 </li>
                 <li>
-                    <span class="check-visual">&check;</span>Homepage refresh
+                    <span class="check-visual check">&check;</span>Homepage refresh
                 </li>
                 <li>
-                    <span class="check-visual">&check;</span>Onboard new Sales team members
+                    <span class="check-visual check">&check;</span>Onboard new Sales team members
                 </li>
                 <li>
-                    <span class="check-visual">&check;</span>Review editorial calendar
+                    <span class="check-visual check">&check;</span>Review editorial calendar
                 </li>
             </ul>
         </section>
