--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <span class="check-visual check">&check;</span>Summit update to mobile storefronts
                 </li>
             </ul>
-        </section class="list-row">
-        <section>
+        </section>
+        <section class="list-row">
             <h3>Today</h3>
             <ul>
                 <li>
