Added down arrows for titles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Begin List -->
         <section class="list-row">
-            <h3>New Task</h3>
+            <h3>&#11167; New Task</h3>
             <ul>
                 <li>
                     <span class="check-visual check">&check;</span>Quarterly Newsletter
@@ -42,7 +42,7 @@
         </section>
 
         <section class="list-row">
-            <h3>Today</h3>
+            <h3>&#11167; Today</h3>
             <ul>
                 <li>
                     <span class="check-visual check">&check;</span>Recruiting blog post
@@ -59,7 +59,7 @@
             </ul>
         </section>
         <section class="list-row">
-            <h3>Today</h3>
+            <h3>&#11167; Today</h3>
             <ul>
                 <li>
                     <span class="check-visual cross">&cross;</span>Scedule meeting with Alex
