Define nav section classes and id's

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <main>
         <!-- Functional Bar Section -->
         <nav class="functional-buttons">
-            <button>Add Task</button>
-            <button>Add Section</button>
+            <button id="btn-add-task">Add Task</button>
+            <button id="btn-add-section">Add Section</button>
         </nav>
 
         <!-- Begin List -->
         <section class="list-row">
-            <h3>&#11167; New Task</h3>
+            <h3 class="list-title">&#11167; New Task</h3>
             <ul>
                 <li>
                     <span class="check-visual check">&check;</span>Quarterly Newsletter
@@ -42,7 +42,7 @@
         </section>
 
         <section class="list-row">
-            <h3>&#11167; Today</h3>
+            <h3 class="list-title">&#11167; Today</h3>
             <ul>
                 <li>
                     <span class="check-visual check">&check;</span>Recruiting blog post
@@ -59,7 +59,7 @@
             </ul>
         </section>
         <section class="list-row">
-            <h3>&#11167; Today</h3>
+            <h3 class="list-title">&#11167; Today</h3>
             <ul>
                 <li>
                     <span class="check-visual cross">&cross;</span>Scedule meeting with Alex
