fixed class name for comprension

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Main Content Section -->
     <main>
         <!-- Functional Bar Section -->
-        <nav class="functional-buttons">
+        <nav class="functional-buttons-section">
             <button id="btn-add-task">Add Task</button>
             <button id="btn-add-section">Add Section</button>
         </nav>
