Fixed html structure for next project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <h3 class="list-title">&#11167; New Task</h3>
             <ul>
                 <li>
-                    <span class="check-visual check">&check;</span>Quarterly Newsletter
+                    <span class="check-visual check">&check;</span>
+                    Quarterly Newsletter
                 </li>
             </ul>
         </section>
@@ -45,16 +46,20 @@
             <h3 class="list-title">&#11167; Today</h3>
             <ul>
                 <li>
-                    <span class="check-visual check">&check;</span>Recruiting blog post
+                    <span class="check-visual check">&check;</span>
+                    Recruiting blog post
                 </li>
                 <li>
-                    <span class="check-visual check">&check;</span>Mobile app launch
+                    <span class="check-visual check">&check;</span>
+                    Mobile app launch
                 </li>
                 <li>
-                    <span class="check-visual cross">&cross;</span>Interview John H.
+                    <span class="check-visual cross">&cross;</span>
+                    Interview John H.
                 </li>
                 <li>
-                    <span class="check-visual check">&check;</span>Summit update to mobile storefronts
+                    <span class="check-visual check">&check;</span>
+                    Summit update to mobile storefronts
                 </li>
             </ul>
         </section>
@@ -62,16 +67,20 @@
             <h3 class="list-title">&#11167; Today</h3>
             <ul>
                 <li>
-                    <span class="check-visual cross">&cross;</span>Scedule meeting with Alex
+                    <span class="check-visual cross">&cross;</span>
+                    Scedule meeting with Alex
                 </li>
                 <li>
-                    <span class="check-visual check">&check;</span>Homepage refresh
+                    <span class="check-visual check">&check;</span>
+                    Homepage refresh
                 </li>
                 <li>
-                    <span class="check-visual check">&check;</span>Onboard new Sales team members
+                    <span class="check-visual check">&check;</span>
+                    Onboard new Sales team members
                 </li>
                 <li>
-                    <span class="check-visual check">&check;</span>Review editorial calendar
+                    <span class="check-visual check">&check;</span>
+                    Review editorial calendar
                 </li>
             </ul>
         </section>
