Defined new tags structure

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Quarterly Newsletter
+                    <span class="tag-visual">Editorial</span>
                 </li>
             </ul>
         </section>
@@ -48,18 +49,22 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Recruiting blog post
+                    <span class="tag-visual">Editorial</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Mobile app launch
+                    <span class="tag-visual">Q1 Goals</span>
                 </li>
                 <li>
                     <span class="check-visual cross">&cross;</span>
                     Interview John H.
+                    <span class="tag-visual">Recruiting</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Summit update to mobile storefronts
+                    <span class="tag-visual">Mobile</span>
                 </li>
             </ul>
         </section>
@@ -73,14 +78,17 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Homepage refresh
+                    <span class="tag-visual">Website</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Onboard new Sales team members
+                    <span class="tag-visual">Sales</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Review editorial calendar
+                    <span class="tag-visual">Editorial</span>
                 </li>
             </ul>
         </section>
