Added tag classes for defining colors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Quarterly Newsletter
-                    <span class="tag-visual">Editorial</span>
+                    <span class="tag-visual tag-editorial">Editorial</span>
                 </li>
             </ul>
         </section>
@@ -49,22 +49,22 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Recruiting blog post
-                    <span class="tag-visual">Editorial</span>
+                    <span class="tag-visual tag-editorial">Editorial</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Mobile app launch
-                    <span class="tag-visual">Q1 Goals</span>
+                    <span class="tag-visual tag-goals">Q1 Goals</span>
                 </li>
                 <li>
                     <span class="check-visual cross">&cross;</span>
                     Interview John H.
-                    <span class="tag-visual">Recruiting</span>
+                    <span class="tag-visual tag-recruiting">Recruiting</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Summit update to mobile storefronts
-                    <span class="tag-visual">Mobile</span>
+                    <span class="tag-visual tag-mobile">Mobile</span>
                 </li>
             </ul>
         </section>
@@ -78,17 +78,17 @@
                 <li>
                     <span class="check-visual check">&check;</span>
                     Homepage refresh
-                    <span class="tag-visual">Website</span>
+                    <span class="tag-visual tag-website">Website</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Onboard new Sales team members
-                    <span class="tag-visual">Sales</span>
+                    <span class="tag-visual tag-sales">Sales</span>
                 </li>
                 <li>
                     <span class="check-visual check">&check;</span>
                     Review editorial calendar
-                    <span class="tag-visual">Editorial</span>
+                    <span class="tag-visual tag-editorial">Editorial</span>
                 </li>
             </ul>
         </section>
